// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1- default state 1`] = `
Object {
  "accountEmail": "",
  "accountName": "",
  "canUseWebp": false,
  "currency": "hbd",
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "hot",
  "hasKeyChain": false,
  "hsClientId": "ecency.app",
  "intro": true,
  "isElectron": false,
  "isMobile": false,
  "lang": "en-US",
  "lastIndexPath": null,
  "listStyle": "row",
  "newVersion": null,
  "notifications": true,
  "nsfw": false,
  "referral": "",
  "searchIndexCount": 0,
  "tag": "",
  "theme": "day",
  "usePrivate": true,
}
`;

exports[`2- location change. should change filter and tag 1`] = `
Object {
  "accountEmail": "",
  "accountName": "",
  "canUseWebp": false,
  "currency": "hbd",
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "hasKeyChain": false,
  "hsClientId": "ecency.app",
  "intro": true,
  "isElectron": false,
  "isMobile": false,
  "lang": "en-US",
  "lastIndexPath": null,
  "listStyle": "row",
  "newVersion": null,
  "notifications": true,
  "nsfw": false,
  "referral": "",
  "searchIndexCount": 0,
  "tag": "bitcoin",
  "theme": "day",
  "usePrivate": true,
}
`;

exports[`3- theme change 1`] = `
Object {
  "accountEmail": "",
  "accountName": "",
  "canUseWebp": false,
  "currency": "hbd",
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "hasKeyChain": false,
  "hsClientId": "ecency.app",
  "intro": true,
  "isElectron": false,
  "isMobile": false,
  "lang": "en-US",
  "lastIndexPath": null,
  "listStyle": "row",
  "newVersion": null,
  "notifications": true,
  "nsfw": false,
  "referral": "",
  "searchIndexCount": 0,
  "tag": "bitcoin",
  "theme": "night",
  "usePrivate": true,
}
`;

exports[`4- hide intro 1`] = `
Object {
  "accountEmail": "",
  "accountName": "",
  "canUseWebp": false,
  "currency": "hbd",
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "hasKeyChain": false,
  "hsClientId": "ecency.app",
  "intro": false,
  "isElectron": false,
  "isMobile": false,
  "lang": "en-US",
  "lastIndexPath": null,
  "listStyle": "row",
  "newVersion": null,
  "notifications": true,
  "nsfw": false,
  "referral": "",
  "searchIndexCount": 0,
  "tag": "bitcoin",
  "theme": "night",
  "usePrivate": true,
}
`;

exports[`5- list style change 1`] = `
Object {
  "accountEmail": "",
  "accountName": "",
  "canUseWebp": false,
  "currency": "hbd",
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "hasKeyChain": false,
  "hsClientId": "ecency.app",
  "intro": false,
  "isElectron": false,
  "isMobile": false,
  "lang": "en-US",
  "lastIndexPath": null,
  "listStyle": "grid",
  "newVersion": null,
  "notifications": true,
  "nsfw": false,
  "referral": "",
  "searchIndexCount": 0,
  "tag": "bitcoin",
  "theme": "night",
  "usePrivate": true,
}
`;

exports[`6- Has keychain act 1`] = `
Object {
  "accountEmail": "",
  "accountName": "",
  "canUseWebp": false,
  "currency": "hbd",
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "hasKeyChain": true,
  "hsClientId": "ecency.app",
  "intro": false,
  "isElectron": false,
  "isMobile": false,
  "lang": "en-US",
  "lastIndexPath": null,
  "listStyle": "grid",
  "newVersion": null,
  "notifications": true,
  "nsfw": false,
  "referral": "",
  "searchIndexCount": 0,
  "tag": "bitcoin",
  "theme": "night",
  "usePrivate": true,
}
`;

exports[`7- Mute notifications act 1`] = `
Object {
  "accountEmail": "",
  "accountName": "",
  "canUseWebp": false,
  "currency": "hbd",
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "hasKeyChain": true,
  "hsClientId": "ecency.app",
  "intro": false,
  "isElectron": false,
  "isMobile": false,
  "lang": "en-US",
  "lastIndexPath": null,
  "listStyle": "grid",
  "newVersion": null,
  "notifications": false,
  "nsfw": false,
  "referral": "",
  "searchIndexCount": 0,
  "tag": "bitcoin",
  "theme": "night",
  "usePrivate": true,
}
`;

exports[`8- Unmute notifications act 1`] = `
Object {
  "accountEmail": "",
  "accountName": "",
  "canUseWebp": false,
  "currency": "hbd",
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "hasKeyChain": true,
  "hsClientId": "ecency.app",
  "intro": false,
  "isElectron": false,
  "isMobile": false,
  "lang": "en-US",
  "lastIndexPath": null,
  "listStyle": "grid",
  "newVersion": null,
  "notifications": true,
  "nsfw": false,
  "referral": "",
  "searchIndexCount": 0,
  "tag": "bitcoin",
  "theme": "night",
  "usePrivate": true,
}
`;

exports[`9- Set lang act 1`] = `
Object {
  "accountEmail": "",
  "accountName": "",
  "canUseWebp": false,
  "currency": "hbd",
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "hasKeyChain": true,
  "hsClientId": "ecency.app",
  "intro": false,
  "isElectron": false,
  "isMobile": false,
  "lang": "tr-TR",
  "lastIndexPath": null,
  "listStyle": "grid",
  "newVersion": null,
  "notifications": true,
  "nsfw": false,
  "referral": "",
  "searchIndexCount": 0,
  "tag": "bitcoin",
  "theme": "night",
  "usePrivate": true,
}
`;

exports[`10- Set nsfw act 1`] = `
Object {
  "accountEmail": "",
  "accountName": "",
  "canUseWebp": false,
  "currency": "hbd",
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "hasKeyChain": true,
  "hsClientId": "ecency.app",
  "intro": false,
  "isElectron": false,
  "isMobile": false,
  "lang": "tr-TR",
  "lastIndexPath": null,
  "listStyle": "grid",
  "newVersion": null,
  "notifications": true,
  "nsfw": true,
  "referral": "",
  "searchIndexCount": 0,
  "tag": "bitcoin",
  "theme": "night",
  "usePrivate": true,
}
`;
